sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:20: error: unclosed comment
/*Pour tout i dans [1,lgr-1]
^AlgInsertionSort:2: error: Missing closing brace `}' assumed here
def insertionSort() {
^